--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="right-cont">
       <a [routerLink]="['/login']" class="login-btn">
-       Einloggen
+       Login
       </a>
     </div>
   </div>
