--- a/src/app/foot/imprint/imprint.component.scss
+++ b/src/app/foot/imprint/imprint.component.scss
@@ -5,8 +5,9 @@
   height: 100vh;
   width: 100%;
   @include dFlex(column, flex-start, center);
-  margin: 0px 124px;
-
+  @media (max-width: 1920px) {
+    margin: 0 32px;
+  }
   > .content{
     @include dFlex(column, center, flex-start);
     gap: 40px;
