--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -5,7 +5,9 @@
   height: 100vh;
   width: 100%;
   @include dFlex(column, space-between, center);
-  margin: 0px 124px;
+  @media (max-width: 1920px) {
+    margin: 0 32px;
+  }
   > .header-cont {
     width: 100%;
     height: 100px;
@@ -48,7 +50,7 @@
         margin-top: 0;
         margin-bottom: 32px;
       }
-      > div {
+      > form {
         > .mail-container {
           margin-bottom: 16px;
           > mat-form-field {
@@ -64,15 +66,16 @@
         }
         > .login-btn {
           margin-top: 14px;
-          width: 100%;
           @include dFlex(row, center, center);
-          > div {
+          > button {
             padding: 12px 24px;
             background-color: #2e3edf;
             border-radius: 40px;
             color: #ffffff;
             font-weight: 700;
             font-size: 18px;
+            outline: none;
+            border: none;
             &:hover {
               transition: all 0.3s ease-in-out;
               cursor: pointer;
@@ -128,6 +131,50 @@
   }
 }
 
+.toast {
+  position: absolute;
+  right: 50px;
+  bottom: 50%;
+  opacity: 0;
+  // animation: plopIn 2s ease-in;
+}
+
+.fade-in-animation {
+  animation: plopIn 1s forwards;
+}
+.fade-out-animation {
+  animation: plopOut 1s forwards;
+}
+
+@keyframes plopIn {
+  from {right: 0; bottom: 50%; opacity: 0;}
+  to{ right: 50px; bottom: 50%; opacity: 1;}
+}
+@keyframes plopOut {
+  from {right: 50px; bottom: 50%; opacity: 1;}
+  to{ right: 0px; bottom: 50%; opacity: 0;}
+}
+
+.error {
+  height: 16px;
+  margin: 4px 4px;
+  font-size: 14px;
+  color: red;
+  @include dFlex(row, flex-start, center);
+}
+
+.disabled {
+  background-color: grey !important;
+  cursor: not-allowed !important;
+}
+
+.enabled {
+    transition: all 0.3s ease-in-out;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 input {
   color: #2e3edf !important;
   font-size: 18px;
@@ -171,6 +218,14 @@ a {
 
 mat-label {
   color: #5460e5;
+}
+
+::ng-deep .mdc-floating-label--required:not(.mdc-floating-label--hide-required-marker)::after {
+  color: #2e3edf !important;
+}
+
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  display: none !important;
 }
 
 .blue-color {
