--- a/src/app/authentication/registration/step-1/step-1.component.scss
+++ b/src/app/authentication/registration/step-1/step-1.component.scss
@@ -9,15 +9,15 @@
       padding: 4px;
       border-radius: 50%;
       > mat-icon {
-        color: #6D19FF;
+        color: #6d19ff;
       }
       &:hover {
         cursor: pointer;
-        background-color: rgba($color: #6D19FF, $alpha: 0.2);
+        background-color: rgba($color: #6d19ff, $alpha: 0.2);
       }
     }
     > span {
-      color: #6D19FF;
+      color: #6d19ff;
       font-weight: 500;
       font-size: 18px;
     }
@@ -28,14 +28,14 @@
   > h2 {
     font-size: 32px;
     margin-bottom: 0px;
-    color: #2E3EDF;
+    color: #2e3edf;
   }
   > p {
     font-size: 22px;
     font-weight: 500;
-    color: #2E3EDF;
+    color: #2e3edf;
   }
-  > div {
+  > form {
     width: 100%;
     > .mail-container {
       > mat-form-field {
@@ -49,54 +49,77 @@
         font-family: "Raleway", sans-serif;
       }
     }
-  }
-  > .continue-btn {
-    margin-top: 16px;
-    transition: all 0.125s ease-in-out;
-    @include dFlex(row, center, center);
-    padding: 8px 24px;
-    background-color: #2E3EDF;
-    width: 360px;
-    height: 48px;
-    border-radius: 40px;
-    &:hover {
-      cursor: pointer;
-      background-color: #5460e5;
-    }
-    > span {
-      font-size: 28px;
-      font-weight: 600;
-      color: #ffffff;
+    > .continue-btn {
+      margin-top: 16px;
+      @include dFlex(row, center, center);
+      > button {
+        transition: all 0.125s ease-in-out;
+        padding: 16px 24px;
+        background-color: #2e3edf;
+        width: 360px;
+        border-radius: 40px;
+        outline: none;
+        border: none;
+        color: #ffffff;
+        font-size: 24px;
+        &:hover {
+          cursor: pointer;
+          background-color: #5460e5;
+        }
+      }
+      
     }
   }
 }
 
-:host ::ng-deep .custom-input-register .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    border-color: #2E3EDF;
-    background-color: #ffffff;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 12px;
-    color: #2E3EDF;
+.error {
+  height: 16px;
+  margin: 4px 4px;
+  font-size: 14px;
+  color: red;
+  @include dFlex(row, flex-start, center);
+}
+
+.disabled {
+  background-color: grey !important;
+  cursor: not-allowed !important;
+}
+
+.enabled {
+    transition: all 0.3s ease-in-out;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+:host
+  ::ng-deep
+  .custom-input-register
+  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  border-color: #2e3edf;
+  background-color: #ffffff;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 12px;
+  color: #2e3edf;
 }
 
 input {
-    color: #2E3EDF !important;
-    font-size: 18px;
-    font-weight: 400;
-    &::placeholder {
-      color: #2E3EDF !important;
-    }
+  color: #2e3edf !important;
+  font-size: 18px;
+  font-weight: 400;
+  &::placeholder {
+    color: #2e3edf !important;
+  }
 }
 
 mat-label {
-    color: #5460e5;
+  color: #5460e5;
 }
 
 .blue-color {
-  color: #2E3EDF;
+  color: #2e3edf;
 }
-
 
 ::ng-deep .mdc-line-ripple::after {
   display: none;
@@ -105,4 +128,12 @@ mat-label {
 ::ng-deep .mdc-line-ripple::before {
   display: none;
   border-bottom-style: none;
+}
+
+::ng-deep .mdc-floating-label--required:not(.mdc-floating-label--hide-required-marker)::after {
+  color: #2e3edf !important;
+}
+
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  display: none !important;
 }
