--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -84,8 +84,10 @@ section {
         transition: all 150ms ease-in-out;
         position: absolute;
         height: 100%;
+        @include dFlex(row, center, center);
+        z-index: 1;
         > button {
-          background-color: rgba(0, 0, 0, 0.5);
+          background: none;
           border: none;
           padding: 6px;
           border-radius: 50%;
@@ -93,15 +95,14 @@ section {
             font-size: 32px;
             height: 28px;
             width: 32px;
-          }
-          &:hover {
-            cursor: pointer;
-            background-color: rgba(0, 0, 0, 0.8);
+            color: #ffffff;
           }
         }
-        z-index: 1;
-
-        @include dFlex(row, center, center);
+        &:hover {
+          > button {
+            background-color: rgba($color: #3547ff, $alpha: 0.8);
+          }
+        }
       }
     }
     .scroll-button.left {
@@ -119,11 +120,28 @@ app-video-item {
   font-size: 16px;
 }
 
+.start-spacing {
+  justify-content: flex-start !important;
+}
 
+.evenly-spacing {
+  justify-content: flex-start !important;
+}
 
+.slider-btn-opacity {
+  opacity: 0.3;
+  transition: all 150ms ease-in-out;
+  &:hover {
+    opacity: 1;
+    > button {
+      cursor: pointer;
+    }
+  }
+}
 
-
-
+.invis {
+  opacity: 0;
+}
 
 /* Für kleinere Bildschirme */
 @media (max-width: 1280px) {
