started responsiv design -> landing, registration, pw-reset, login

--- a/src/app/authentication/landingpage/landingpage.component.html
+++ b/src/app/authentication/landingpage/landingpage.component.html
@@ -3,9 +3,9 @@
 
   <div class="mail-cont">
     <span>Unbegrenzt Filme, Serien und mehr.</span>
-    <p>Geniessen Sie Videoflix wo immer sie möchten.</p>
-    <p>Sind Sie startklar? Geben Sie Ihre E-Mailadresse ein, um loszulegen!</p>
-
+    <p>Geniesse Videoflix wo immer du willst.</p>
+    <p>Startklar? Dann gib deine E-Mailadresse ein, um loszulegen!</p>
+    <p>Angetrieben vom Raspberry PI 5</p>
     <div class="mail-container custom-input-login">
       <mat-form-field>
         <mat-label>Gib deine E-Mail ein</mat-label>
