--- a/src/app/authentication/registration/step-1/step-1.component.html
+++ b/src/app/authentication/registration/step-1/step-1.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <h2>Vergib ein Passwort, um dein Konto zu erstellen.</h2>
-  <p>
+  <p class="SE">
     Nur noch ein paar Schritte und Du hast es geschafft! <br />
     Wir finden Papierkram auch nervig.
   </p>
