--- a/src/app/authentication/registration/step-2/step-2.component.html
+++ b/src/app/authentication/registration/step-2/step-2.component.html
@@ -9,8 +9,8 @@
       um die Registrierung abzuschliessen !
     </p>
     
-    <div (click)="backToLogin()" class="continue-btn">
+    <!-- <div (click)="backToLogin()" class="continue-btn">
       <span>Zum Login</span>
-    </div>
+    </div> -->
   </div>
   
