--- a/src/app/head/header/header.component.html
+++ b/src/app/head/header/header.component.html
@@ -3,7 +3,8 @@
         <!-- <span>CHILL</span>
         <span class="n-letter">'N'</span>
         <span>FLIX</span> -->
-        <img src="./assets/logos/Logo.png" alt="logo">
+        <img class="no-mobile-logo" src="./assets/logos/Logo.png" alt="logo">
+        <img class="mobile-logo" src="./assets/logos/Symbol.png" alt="logo-mobile">
     </div>
     <div *ngIf="!isLoginScreen" class="right-cont">
         <a [routerLink]="['/login']" class="login-btn">
