--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -8,6 +8,9 @@
   @media (max-width: 1920px) {
     margin: 0 32px;
   }
+  @media (max-width: 560px) {
+    margin: 0 16px;
+  }
   > .header-cont {
     width: 100%;
     height: 100px;
@@ -17,15 +20,15 @@
       &:hover {
         cursor: pointer;
       }
-      > span {
-        color: #e50815;
-        font-size: 32px;
-        font-weight: 700;
-      }
-      > .n-letter {
-        color: #ffffff;
-        padding: 0px 4px;
-      }
+      // > span {
+      //   color: #e50815;
+      //   font-size: 32px;
+      //   font-weight: 700;
+      // }
+      // > .n-letter {
+      //   color: #ffffff;
+      //   padding: 0px 4px;
+      // }
     }
   }
 
@@ -38,6 +41,21 @@
       padding: 43px 56px;
       background-color: #ffffff;
       border-radius: 48px;
+      @media (max-width: 560px) {
+        min-width: 342px;
+        padding: 43px 24px;
+        > h3 {
+          font-size: 40px;
+        }
+      }
+      @media (max-width: 410px) {
+        min-width: 300px;
+        padding: 42px 16px;
+      }
+      @media (max-width: 375px) and (max-height: 667px) and (orientation: portrait) {
+        //iPhone SE
+        padding: 16px 12px;
+      }
       > span {
         color: #ee2222;
         font-size: 24px;
@@ -111,6 +129,16 @@
       > .register-cont {
         @include dFlex(row, center, center);
         gap: 24px;
+        @media (max-width: 560px) {
+          gap: 16px;
+        }
+        @media (max-width: 420px) {
+          gap: 4px;
+        }
+        @media (max-width: 390px) {
+          flex-direction: column;
+          gap: 16px;
+        }
         > .new-cont {
           font-size: 18px;
           font-weight: 500;
@@ -137,6 +165,15 @@
   bottom: 50%;
   opacity: 0;
   // animation: plopIn 2s ease-in;
+  @media (max-width: 1700px) {
+    bottom: 20%;
+  }
+  @media (max-width: 640px) {
+    right: 16px;
+  }
+  @media (max-width: 560px) {
+    right: 0px;
+  }
 }
 
 .fade-in-animation {
@@ -147,12 +184,28 @@
 }
 
 @keyframes plopIn {
-  from {right: 0; bottom: 50%; opacity: 0;}
-  to{ right: 50px; bottom: 50%; opacity: 1;}
+  from {
+    right: 0;
+    bottom: 50%;
+    opacity: 0;
+  }
+  to {
+    right: 50px;
+    bottom: 50%;
+    opacity: 1;
+  }
 }
 @keyframes plopOut {
-  from {right: 50px; bottom: 50%; opacity: 1;}
-  to{ right: 0px; bottom: 50%; opacity: 0;}
+  from {
+    right: 50px;
+    bottom: 50%;
+    opacity: 1;
+  }
+  to {
+    right: 0px;
+    bottom: 50%;
+    opacity: 0;
+  }
 }
 
 .error {
@@ -169,7 +222,7 @@
 }
 
 .enabled {
-    transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   &:hover {
     cursor: pointer;
   }
@@ -220,7 +273,10 @@ mat-label {
   color: #5460e5;
 }
 
-::ng-deep .mdc-floating-label--required:not(.mdc-floating-label--hide-required-marker)::after {
+::ng-deep
+  .mdc-floating-label--required:not(
+    .mdc-floating-label--hide-required-marker
+  )::after {
   color: #2e3edf !important;
 }
 
