--- a/src/app/authentication/pw-reset/pw-reset.component.scss
+++ b/src/app/authentication/pw-reset/pw-reset.component.scss
@@ -8,49 +8,21 @@
   @media (max-width: 1920px) {
     margin: 0 32px;
   }
-  > .header-cont {
-    width: 100%;
-    height: 100px;
-    @include dFlex(row, space-between, center);
-    > .logo {
-      &:hover {
-        cursor: pointer;
-      }
-      @include dFlex(row, flex-start, center);
-      > span {
-        color: #e50815;
-        font-size: 32px;
-        font-weight: 700;
-      }
-      > .n-letter {
-        color: #ffffff;
-        padding: 0px 4px;
-      }
-    }
-    > .right-cont {
-      @include dFlex(row, flex-end, center);
-      > .login-btn {
-        transition: all 0.3s ease-in-out;
-        text-decoration: none;
-        width: 98px;
-        height: 32px;
-        border-radius: 4px;
-        background-color: #e50815;
-        @include dFlex(row, center, center);
-        &:hover {
-          background-color: #ac040f;
-        }
-        > span {
-          font-size: 16px;
-          font-weight: 700;
-          color: #ffffff;
-        }
-      }
-    }
+  @media (max-width: 560px) {
+    margin: 0 16px;
   }
-
   > .mail-cont {
     @include dFlex(column, center, center);
+    @media (max-width: 950px) {
+      > span {
+        font-size: 40px;
+        text-align: center;
+      }
+      > p {
+        font-size: 20px;
+        text-align: center;
+      }
+    }
     > span {
       color: #ffffff;
       font-size: 48px;
@@ -69,10 +41,19 @@
       gap: 32px;
       width: 100%;
       margin-bottom: 16px;
+      @media (max-width: 950px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
       > mat-form-field {
         width: 63%;
         font-family: "Raleway", sans-serif;
+        @media (max-width: 580px) {
+          width: 100%;
       }
+      }
+
       > .login-btn {
         @include dFlex(row, flex-start, center);
         > div {
@@ -105,7 +86,7 @@
 }
 
 .enabled {
-    transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   &:hover {
     cursor: pointer;
   }
@@ -119,8 +100,6 @@
   border-radius: 40px;
   border: 1px solid #2e3edf !important;
 }
-
-
 
 input {
   color: #2e3edf !important;
@@ -145,7 +124,10 @@ input {
   padding-right: 24px !important;
 }
 
-::ng-deep .mdc-floating-label--required:not(.mdc-floating-label--hide-required-marker)::after {
+::ng-deep
+  .mdc-floating-label--required:not(
+    .mdc-floating-label--hide-required-marker
+  )::after {
   color: #2e3edf !important;
 }
 
