--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -7,6 +7,9 @@
   @media (max-width: 1920px) {
     margin: 0 32px;
   }
+  @media (max-width: 560px) {
+    margin: 0 16px;
+  }
   @include dFlex(column, space-between, center);
   > .header-cont {
     width: 100%;
@@ -45,6 +48,16 @@
     padding: 43px 56px;
     border-radius: 48px;
     background-color: #ffffff;
+    @media (max-width: 560px) {
+      padding: 43px 24px;
+    }
+    @media (max-width: 480px) {
+      padding: 42px 16px;
+    }
+    @media (max-width: 375px) and (max-height: 667px) and (orientation: portrait) {
+      //iPhone SE
+      padding: 16px 12px;
+    }
   }
   
 }
