--- a/src/app/authentication/registration/step-0/step-0.component.scss
+++ b/src/app/authentication/registration/step-0/step-0.component.scss
@@ -5,22 +5,34 @@
   > img {
     height: 90px;
     margin-bottom: 20px;
+    @media (max-width: 480px) {
+      height: 64px;
+    }
   }
   > span {
     padding-top: 20px;
     color: #6D19FF;
     font-weight: 500;
     font-size: 18px;
+    @media (max-width: 480px) {
+      padding-top: 12px;
+    }
   }
   > h2 {
     font-size: 32px;
     margin-bottom: 0px;
     color: #2E3EDF;
+    @media (max-width: 480px) {
+      font-size: 30px;
+    }
   }
   > p {
     font-size: 22px;
     font-weight: 500;
     color: #2E3EDF;
+    @media (max-width: 480px) {
+      font-size: 18px;
+    }
   }
   > .continue-btn {
     margin-top: 16px;
@@ -28,10 +40,12 @@
     @include dFlex(row, center, center);
     padding: 8px 24px;
     background-color: #2E3EDF;
-    ;
     width: 360px;
     height: 48px;
     border-radius: 40px;
+    @media (max-width: 480px) {
+    width: 224px;
+    }
     &:hover {
       cursor: pointer;
       background-color: #5460e5;
