--- a/src/app/authentication/registration/step-2/step-2.component.scss
+++ b/src/app/authentication/registration/step-2/step-2.component.scss
@@ -4,7 +4,7 @@
   @include dFlex(column, center, center);
   > .step-headline {
     width: 100%;
-    @include dFlex(row, flex-end, center);
+    @include dFlex(row, center, center);
     > span {
       color: #6D19FF;
       font-weight: 500;
@@ -31,6 +31,9 @@
     width: 360px;
     height: 48px;
     border-radius: 40px;
+    @media (max-width: 480px) {
+      width: 224px;
+    }
     &:hover {
       cursor: pointer;
       background-color: #5460e5;
